chgmgmt_build/src/objects/AssociateContract__c.object
<CustomObject>
    <fields>
        <fullName>ClientBranch__c</fullName>
        <label>クライアント事業所</label>
        <referenceTo>ClientBranch__c</referenceTo>
        <relationshipLabel>アソシエイト契約</relationshipLabel>
        <relationshipName>AssociateContract</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ContractStartDate__c</fullName>
        <label>契約開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <label>契約ステータス</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>初期入力</fullName>
                </value>
                <value>
                    <fullName>ドラフト作成</fullName>
                </value>
                <value>
                    <fullName>承認依頼</fullName>
                </value>
                <value>
                    <fullName>承認済</fullName>
                </value>
                <value>
                    <fullName>契約締結済</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>アソシエイト契約</label>
    <listViews>
        <fullName>ALL1</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>ALL契約</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ContractStartDate__c</columns>
        <columns>ClientBranch__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>アソシエイト契約番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>アソシエイト契約</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>